Bug 30: Cleanup sidebar.css. Bug 28: Ensure drop indicator is always visible. Tidied up unecessary resizes.

--- a/chrome/skin/sidebar.css
+++ b/chrome/skin/sidebar.css
@@ -3,10 +3,7 @@ page {
 }
 
 tabpreviews scrollbox[anonid="scrollbox"] {
-  padding-top: 0px;
-  padding-left: 2px;
-  padding-right: 2px;
-  padding-bottom: 0;
+  padding: 0px 2px 0px 2px;
 }
 
 .tab-drop-indicator-bar {
@@ -28,8 +25,7 @@ tabpreviews scrollbox[anonid="scrollbox"] {
 }
 
 separator {
-  margin-top: 4px;
-  margin-bottom: 4px;
+  margin: 4px 0px 4px 0px;
 }
 
 tabpreview {
@@ -39,11 +35,8 @@ tabpreview {
 }
 
 tabpreviews tabpreview[selected="true"] {
-  border-top-color:    ThreeDShadow;
-  border-right-color:  ThreeDHighlight;
-  border-bottom-color: ThreeDHighlight;
-  border-left-color:   ThreeDShadow;
-  background-color:    ThreeDHighlight;
+  border-color: ThreeDShadow ThreeDHighlight ThreeDHighlight ThreeDShadow;
+  background-color: ThreeDHighlight;
 }
 
 tabpreviews tabpreview[selected="true"] label[anonid="title"] {
@@ -51,17 +44,11 @@ tabpreviews tabpreview[selected="true"] label[anonid="title"] {
 }
 
 tabpreview:hover {
-  border-top-color:    ThreeDHighlight;
-  border-right-color:  ThreeDShadow;
-  border-bottom-color: ThreeDShadow;
-  border-left-color:   ThreeDHighlight;
+  border-color: ThreeDHighlight ThreeDShadow ThreeDShadow ThreeDHighlight;
 }
 
 tabpreview .toolbarbutton-icon {
   margin: 0px;
-}
-  
-tabpreview toolbarbutton {
 }
   
 tabpreview vbox.sidestrip {
@@ -82,7 +69,7 @@ tabpreview:hover canvas, tabpreview[selected="true"] canvas {
 }
 
 tabpreview[selected="false"] canvas {
-  opacity: 0.75;
+  opacity: 0.6;
 }
 
 tabpreview label {
